--- a/index.html
+++ b/index.html
@@ -3,12 +3,35 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="shortcut icon" href="#">
+    <link rel="shortcut icon" href="#" />
+    <link rel="stylesheet" href="styles.css" />
     <title></title>
   </head>
   <body>
-    <h1>Welcome to rock paper scissors</h1>
-    <h2>Open the console to play</h2>
+    <div class="container">
+      <div class="winner" id="winner">Computer wins</div>
+      <h1 class="heading">Rock Paper Scissors</h1>
+      <div class="score-box">
+        <div class="score">
+          Computer Score:<span id="computer-score">0</span>
+        </div>
+        <div class="score">Player Score:<span id="player-score">0</span></div>
+      </div>
+      <div class="info-box">
+        <div class="info">
+          <div class="spinner" id="spinner"></div>
+          <div class="info-text" id="computer-choice">Computer</div>
+        </div>
+        <div class="info">
+          <div class="info-text" id="player-choice">Player</div>
+        </div>
+      </div>
+      <div class="choice-box">
+        <button class="choices" id="rock">Rock</button>
+        <button class="choices" id="paper">Paper</button>
+        <button class="choices" id="scissors">Scissors</button>
+      </div>
+    </div>
     <script src="index.js"></script>
   </body>
 </html>
